--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     /*flex-shrink: 0;*/
     display: grid;
     grid-gap: 0;
-    height: 400px;
-    width: 400px;
+    height: 25em;
+    width: 25em;
    justify-content: center;
    align-content: center;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
@@ -24,14 +24,16 @@ body{
     display: flex;
     flex-wrap: wrap;
     min-height: 100%;
-    min-width: 100%;  
+    min-width: 100%;
+    flex-direction: column;
+    align-content: center;
 }
 
 .side{
     width: auto;
     height: auto;
     flex-grow: 1;
-    background-color: yellow;
+    background-color: rgba(255, 255, 0, 0);
 }
 .container{
     background-color: pink;
@@ -42,7 +44,7 @@ body{
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-around;
 }
 
 .slidecontainer {
@@ -52,7 +54,7 @@ body{
   -webkit-appearance: none;  /* Override default CSS styles */
   appearance: none;
   width: 100%; /* Full-width */
-  height: 25px; /* Specified height */
+  height: 1.5em; /* Specified height */
   background: #d3d3d3; /* Grey background */
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
@@ -68,15 +70,28 @@ body{
 .slider::-webkit-slider-thumb {
   -webkit-appearance: none; /* Override default look */
   appearance: none;
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  width: 2em; /* Set a specific slider handle width */
+  height: 2em; /* Slider handle height */
+  background: #00cbfd; /* Green background */
   cursor: pointer; /* Cursor on hover */
 }
 
 .slider::-moz-range-thumb {
-  width: 25px; /* Set a specific slider handle width */
-  height: 25px; /* Slider handle height */
-  background: #4CAF50; /* Green background */
+  width: 2em; /* Set a specific slider handle width */
+  height: 2em; /* Slider handle height */
+  background: #00b1f7; /* Green background */
   cursor: pointer; /* Cursor on hover */
+}
+
+
+.colorButton{
+  display:flex;
+  direction: row;
+  justify-content: space-around;
+
+}
+.label{
+  font-size: 1em;
+  text-align: center;
+
 }
