--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   }
 
 body{
-    background-color: rgb(139, 137, 137);
+    background-color: rgb(80, 78, 78);
     display: flex;
     flex-wrap: wrap;
     min-height: 100%;
@@ -93,5 +93,46 @@ body{
 .label{
   font-size: 1em;
   text-align: center;
+  font-family:sans-serif;
+  color:white;
 
+}
+p{
+  font-size: 0.7em;
+  text-align: center;
+  font-family:sans-serif;
+  color:white;
+}
+
+
+button {
+  display: inline-block;
+  border: none;
+  padding: 0.6em;
+  margin: 0;
+  text-decoration: none;
+  background: #8b9e9e;
+  color: #ffffff;
+  font-family: sans-serif;
+  font-size: 1em;
+  cursor: pointer;
+  text-align: center;
+  transition: background 250ms ease-in-out, 
+              transform 150ms ease;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
+button:hover,
+button:focus {
+  background: #0053ba;
+}
+
+button:focus {
+  outline: 1px solid #fff;
+  outline-offset: -4px;
+}
+
+button:active {
+  transform: scale(0.99);
 }
